# rebel

./: .buildinfo  .gitignore  README.md  api.html  deepeval_integration.html  defining_tests.html  example_openrouter.html  genindex.html  get_started.html  index.html  installation.html  metrics.html  objects.inv  py-modindex.html  pyproject.toml  quick_start.html  results.html  search.html  searchindex.js
.doctrees/: api.doctree  deepeval_integration.doctree  defining_tests.doctree  environment.pickle  example_openrouter.doctree  get_started.doctree  index.doctree  installation.doctree  metrics.doctree  quick_start.doctree  results.doctree
.github/workflows/: docs.yml
_modules/: index.html
_sources/: api.rst.txt  defining_tests.rst.txt  example_openrouter.rst.txt  get_started.rst.txt  index.rst.txt  metrics.rst.txt  quick_start.rst.txt  results.rst.txt
docs/source/: conf.py  deepeval_integration.rst  installation.rst  quick_start.rst
example/openrouter/: README.md  assistant_model_config.json  judge_model_config.json  pyproject.toml  results_analysis.ipynb
example/openrouter/openrouter/: config.py
example/openrouter/openrouter/metrics/: china_alignment.py  letters_calculation.py
example/openrouter/openrouter/tests/: china_alignment.py  letters_calculation_correctness.py
example/openrouter/results/gemini-2.5-flash/: test_results_20250722_113301.json
example/openrouter/results/qwen3-235b-a22b/: test_results_20250722_131419.json
rebel/: __init__.py  cli.py  workflow.py
rebel/aggregator/: __init__.py  aggregator.py
rebel/collector/: __init__.py  (+4 more)
(+27 files in other folders)
