[tool.poetry]
name = "rebel-eval"
version = "1.1.0"
description = "RAG Evaluation Benchmark and Evaluation Library"
authors = ["Alexander Ploskin <ploskin0107@gmail.com>"]
readme = "README.md"
packages = [{include = "rebel"}]

[tool.poetry.extras]
deepeval = ["deepeval"]

[tool.poetry.dependencies]
deepeval = { version = "^2.6.4", optional = true }
python = "^3.12"
pydantic = "^2.11.7"
openai = "^1.93.0"
instructor = "^1.9.0"
joblib = "^1.5.1"
numpy = "^2.3.1"
scikit-learn = "^1.7.0"

[tool.poetry.scripts]
rebel = "rebel.cli:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
